// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpensesSummary should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    3
     expense(s) totalling 
    $1,141.95
  </h2>
</div>
`;

exports[`ExpensesSummary should render ExpensesSummary correctly with no expense 1`] = `
<div>
  <h2>
    Viewing 
    0
     expense(s) totalling 
    $0.00
  </h2>
</div>
`;

exports[`ExpensesSummary should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     expense(s) totalling 
    $1.95
  </h2>
</div>
`;
